# oxidizer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
dev/src/: custom_style_prompt.md  style_profile.md
docs/plans/: 2026-04-08-oxidizer-phase1-revise.md  2026-04-08-phase2-ai-detector-evasion.md
oxidizer/: __init__.py  cli.py  diff.py  llm.py
oxidizer/detection/: __init__.py  registry.py  statistical.py  structural.py  vocabulary.py
oxidizer/engine/: pipeline.py  revise.py  write.py
oxidizer/parsers/: __init__.py  docx_parser.py  latex_parser.py  markdown_parser.py  pdf_parser.py
oxidizer/preservation/: checker.py  extractor.py
oxidizer/profiles/: loader.py  schema.py
oxidizer/scoring/: html_report.py  metrics.py  reporter.py
profiles/: jinchi.yaml
skill/: SKILL.md
tests/: conftest.py  test_ai_detection.py  test_checker.py  test_cli.py  test_diff.py  test_extractor.py  test_html_report.py  test_integration.py  test_llm.py  test_loader.py  test_metrics.py  test_parsers.py  test_reporter.py  test_revise.py  test_schema.py  test_statistical.py  test_structural.py  test_vocabulary.py  test_write.py
tests/fixtures/: sample_methods.md
