[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxidizer"
version = "0.1.0"
description = "Academic writing style engine"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "python-docx>=1.0",
    "pdfplumber>=0.11",
    "spacy>=3.7",
    "nltk>=3.8",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
api = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "anthropic>=0.40",
]

[project.scripts]
oxidizer = "oxidizer.cli:cli"

[tool.setuptools.packages.find]
include = ["oxidizer*"]
